{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 194,
  "lineage": "d0494e7a-33f0-187f-e096-087211e0a030",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:listener/app/techbookhub-alb/6cd874fd4e129847/19cff4505133f084",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:listener/app/techbookhub-alb/6cd874fd4e129847/19cff4505133f084",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:loadbalancer/app/techbookhub-alb/6cd874fd4e129847",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d8d2115408c003a",
            "association_id": "eipassoc-02b17c7c18a33a092",
            "domain": "vpc",
            "id": "eipalloc-03d8d2115408c003a",
            "instance": "i-08a273cad35f47a67",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-07616f5357e39b469",
            "private_dns": "ip-10-0-0-99.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.99",
            "public_dns": "ec2-18-176-50-123.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.50.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_01",
            "aws_network_interface.web_01",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9a314ce79311c88",
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:instance/i-08a273cad35f47a67",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a273cad35f47a67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "techbook-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07616f5357e39b469"
              }
            ],
            "primary_network_interface_id": "eni-07616f5357e39b469",
            "private_dns": "ip-10-0-0-99.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.99",
            "public_dns": "ec2-18-176-50-123.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.50.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062e68c60b0850518",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b3f91b6d5cecd02",
            "tags": {
              "Name": "techbookhub-web-01"
            },
            "tags_all": {
              "Name": "techbookhub-web-01"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "techbookhub-web-01"
            },
            "vpc_security_group_ids": [
              "sg-05ed05b3a42dec8f2"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_01",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:internet-gateway/igw-078f19c182204c3cb",
            "id": "igw-078f19c182204c3cb",
            "owner_id": "511160948433",
            "tags": {
              "Name": "techbookhub-igw"
            },
            "tags_all": {
              "Name": "techbookhub-igw"
            },
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:loadbalancer/app/techbookhub-alb/6cd874fd4e129847",
            "arn_suffix": "app/techbookhub-alb/6cd874fd4e129847",
            "desync_mitigation_mode": "defensive",
            "dns_name": "techbookhub-alb-1215052846.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:loadbalancer/app/techbookhub-alb/6cd874fd4e129847",
            "idle_timeout": 3000,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techbookhub-alb",
            "security_groups": [
              "sg-064641b02f5d1ee4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00559c5162fdd849b"
              },
              {
                "subnet_id": "subnet-06b3f91b6d5cecd02"
              }
            ],
            "subnets": [
              "subnet-00559c5162fdd849b",
              "subnet-06b3f91b6d5cecd02"
            ],
            "vpc_id": "vpc-0f4d9d38d91bd28a4",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:listener/app/techbookhub-alb/6cd874fd4e129847/4f895eca5f8dfc6b",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:511160948433:certificate/c8ec6caa-5d79-4ecd-a6ac-5895626fae0b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:listener/app/techbookhub-alb/6cd874fd4e129847/4f895eca5f8dfc6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:loadbalancer/app/techbookhub-alb/6cd874fd4e129847",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.public",
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8",
            "arn_suffix": "targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "techbookhub-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8-20220517133400402900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:511160948433:targetgroup/techbookhub-alb-tg/71ae5af1a60e6eb8",
            "target_id": "i-08a273cad35f47a67"
          },
          "dependencies": [
            "aws_instance.web_01",
            "aws_lb_target_group.alb_tg",
            "aws_network_interface.web_01",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:network-interface/eni-07616f5357e39b469",
            "attachment": [
              {
                "attachment_id": "eni-attach-0eb3d7ea7c4c77789",
                "device_index": 0,
                "instance": "i-08a273cad35f47a67"
              }
            ],
            "id": "eni-07616f5357e39b469",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:2b:ee:9d:31:95",
            "owner_id": "511160948433",
            "private_dns_name": "ip-10-0-0-99.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.99",
            "private_ip_list": [
              "10.0.0.99"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.99"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05ed05b3a42dec8f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b3f91b6d5cecd02",
            "tags": {
              "Name": "techbookhub-web-01"
            },
            "tags_all": {
              "Name": "techbookhub-web-01"
            }
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-078f19c182204c3cb",
            "id": "r-rtb-07fad44126e6576b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07fad44126e6576b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:route-table/rtb-031a54827cf096e90",
            "id": "rtb-031a54827cf096e90",
            "owner_id": "511160948433",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "techbookhub-private-route"
            },
            "tags_all": {
              "Name": "techbookhub-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:route-table/rtb-07fad44126e6576b8",
            "id": "rtb-07fad44126e6576b8",
            "owner_id": "511160948433",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078f19c182204c3cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techbookhub-public-route"
            },
            "tags_all": {
              "Name": "techbookhub-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055818bfe9359aee6",
            "route_table_id": "rtb-031a54827cf096e90",
            "subnet_id": "subnet-0be3642e520a00655"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077a6dc745919f09f",
            "route_table_id": "rtb-031a54827cf096e90",
            "subnet_id": "subnet-0eca312e0be306266"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff364688af218c9",
            "route_table_id": "rtb-07fad44126e6576b8",
            "subnet_id": "subnet-06b3f91b6d5cecd02"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0264ff81e390c6c",
            "route_table_id": "rtb-07fad44126e6576b8",
            "subnet_id": "subnet-00559c5162fdd849b"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:security-group/sg-064641b02f5d1ee4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064641b02f5d1ee4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techbookhub-elb-sg",
            "name_prefix": "",
            "owner_id": "511160948433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techbookhub-elb-sg"
            },
            "tags_all": {
              "Name": "techbookhub-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:security-group/sg-043082ef8d2051722",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-043082ef8d2051722",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ed05b3a42dec8f2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "techbookhub-rds-sg",
            "name_prefix": "",
            "owner_id": "511160948433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techbookhub-rds-sg"
            },
            "tags_all": {
              "Name": "techbookhub-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:security-group/sg-05ed05b3a42dec8f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ed05b3a42dec8f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "61.201.24.251/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "61.201.24.251/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064641b02f5d1ee4b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techbookhub-ec2-sg",
            "name_prefix": "",
            "owner_id": "511160948433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techbookhub-ec2-sg"
            },
            "tags_all": {
              "Name": "techbookhub-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4208690002",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ed05b3a42dec8f2",
            "self": false,
            "source_security_group_id": "sg-064641b02f5d1ee4b",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_http_from_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1064099986",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064641b02f5d1ee4b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_http_from_myip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "61.201.24.251/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2635317132",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ed05b3a42dec8f2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.vpc",
            "data.http.ipify"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_https_from_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1163810686",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064641b02f5d1ee4b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_mysql_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-45119781",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-043082ef8d2051722",
            "self": false,
            "source_security_group_id": "sg-05ed05b3a42dec8f2",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_sg",
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_ssh_from_myip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "61.201.24.251/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2617343447",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ed05b3a42dec8f2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.vpc",
            "data.http.ipify"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "out_all_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2376354009",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05ed05b3a42dec8f2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "out_all_from_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4260216054",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-064641b02f5d1ee4b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:subnet/subnet-0be3642e520a00655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be3642e520a00655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511160948433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techbookhub-private-subnet-1a"
            },
            "tags_all": {
              "Name": "techbookhub-private-subnet-1a"
            },
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:subnet/subnet-0eca312e0be306266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eca312e0be306266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511160948433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techbookhub-private-subnet-1c"
            },
            "tags_all": {
              "Name": "techbookhub-private-subnet-1c"
            },
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:subnet/subnet-06b3f91b6d5cecd02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b3f91b6d5cecd02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511160948433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techbookhub-public-subnet-1a"
            },
            "tags_all": {
              "Name": "techbookhub-public-subnet-1a"
            },
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:subnet/subnet-00559c5162fdd849b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00559c5162fdd849b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511160948433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techbookhub-public-subnet-1c"
            },
            "tags_all": {
              "Name": "techbookhub-public-subnet-1c"
            },
            "vpc_id": "vpc-0f4d9d38d91bd28a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511160948433:vpc/vpc-0f4d9d38d91bd28a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0392a6cd6e94ca6de",
            "default_route_table_id": "rtb-0deb55a3731d75439",
            "default_security_group_id": "sg-09bebbdfcd7aa71b4",
            "dhcp_options_id": "dopt-37050b50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f4d9d38d91bd28a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0deb55a3731d75439",
            "owner_id": "511160948433",
            "tags": {
              "Name": "techbookhub-vpc"
            },
            "tags_all": {
              "Name": "techbookhub-vpc"
            }
          }
        }
      ]
    }
  ]
}